--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: deploy-book
 on:
   push:
     branches:
-      - main
+      - main  # change if your default branch is named differently
 
 jobs:
   build:
