--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,15 @@
 title: My Jupyter Book
 author: Hiba Bederina
 logo: null
+
+only_build_toc_files: true  # avoid building unlisted files
+
 execute:
-  execute_notebooks: "off"
+  execute_notebooks: "off"  # prevents running cells
+
+html:
+  favicon: null
+  home_page_in_navbar: true
+  use_repository_button: true
+  use_edit_page_button: false
+  use_issues_button: false
